--- a/network_property/network_property.ipynb
+++ b/network_property/network_property.ipynb
@@ -27,7 +27,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 76,
+      "execution_count": 1,
       "metadata": {
         "id": "ouJqxaQOYbjg"
       },
@@ -57,7 +57,7 @@
       "metadata": {
         "id": "nCcbEfDAZyy9"
       },
-      "execution_count": 77,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -97,7 +97,7 @@
       "metadata": {
         "id": "U4rOAhilYpSF"
       },
-      "execution_count": 78,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -124,9 +124,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ffrhwsxAZpRj",
-        "outputId": "a4a8220c-2caf-4a20-d2ee-2a8b41620b1e"
+        "outputId": "29a71b31-3148-4f5d-8e8d-7dd8e2693b8a"
       },
-      "execution_count": 79,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -163,9 +163,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "AnsIRr-5aGiO",
-        "outputId": "5ea5ecd6-b9d2-498a-8367-39203b5ffba6"
+        "outputId": "e6270dc1-a5d5-4c92-9b9d-56c1de62c426"
       },
-      "execution_count": 80,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -195,9 +195,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "VIAo53P1atzQ",
-        "outputId": "bb0555d2-0917-4179-9ab2-30a4daa823ca"
+        "outputId": "de69e3c1-3578-4500-ce0d-738f5bebad1a"
       },
-      "execution_count": 81,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -207,7 +207,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 81
+          "execution_count": 6
         }
       ]
     },
@@ -228,7 +228,7 @@
       "metadata": {
         "id": "7OCnkkyVbK8F"
       },
-      "execution_count": 82,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -248,7 +248,7 @@
       "metadata": {
         "id": "0_HD00M6bWd_"
       },
-      "execution_count": 83,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -270,9 +270,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zgKEHAy0bokq",
-        "outputId": "eba40061-67cf-4e99-dcb1-6b6a618d144f"
+        "outputId": "0a62f211-f495-4511-a522-64347de6d81a"
       },
-      "execution_count": 84,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -282,7 +282,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 84
+          "execution_count": 9
         }
       ]
     },
@@ -296,9 +296,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FoyWX8x3eNBb",
-        "outputId": "e9e3c709-9058-48b0-ecb4-1c7310b16e61"
+        "outputId": "4c3275d1-0a05-4aa9-93df-8c21e2a62de2"
       },
-      "execution_count": 85,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -308,7 +308,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 85
+          "execution_count": 10
         }
       ]
     },
@@ -322,9 +322,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "P_hnDWa5ePde",
-        "outputId": "77b62325-055d-470d-a2eb-0a26070281ac"
+        "outputId": "01ee4dce-8281-47a2-a918-7b211eb1c91a"
       },
-      "execution_count": 86,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -334,7 +334,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 86
+          "execution_count": 11
         }
       ]
     },
@@ -359,9 +359,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "AvetpPMNeWcu",
-        "outputId": "eb639a8a-de5f-4654-ea3a-994ecd156c0e"
+        "outputId": "eb31e8ae-7c09-4d34-ec2d-4d2d9208d121"
       },
-      "execution_count": 87,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -371,7 +371,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 87
+          "execution_count": 12
         }
       ]
     },
@@ -394,9 +394,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fJrjcDymfFv5",
-        "outputId": "88ad1024-be07-48d8-db2a-5bf87f01168e"
+        "outputId": "b6d298a6-b113-47d3-a99e-7804c18438f5"
       },
-      "execution_count": 88,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -406,7 +406,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 88
+          "execution_count": 13
         }
       ]
     },
@@ -429,9 +429,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "CRLjWqxkfVbK",
-        "outputId": "e3b3d8a2-450f-4b54-f421-8520d27afb85"
+        "outputId": "394a9314-6163-4b19-d285-bbe3b85faec2"
       },
-      "execution_count": 89,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -441,7 +441,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 89
+          "execution_count": 14
         }
       ]
     },
@@ -464,9 +464,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8QkbQa99fnct",
-        "outputId": "68791d74-8d83-4b90-c252-da2e227da70a"
+        "outputId": "6c9221a7-199d-4f0f-94c7-159c2c4725d1"
       },
-      "execution_count": 90,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -476,7 +476,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 90
+          "execution_count": 15
         }
       ]
     },
@@ -490,9 +490,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "51EbdvS3fq6s",
-        "outputId": "09317377-ee77-45e2-e3b4-602c3e1189cc"
+        "outputId": "e57bba34-0149-48c9-ab8c-bf798318c303"
       },
-      "execution_count": 91,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -502,7 +502,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 91
+          "execution_count": 16
         }
       ]
     },
@@ -534,19 +534,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "m2mZM9AWf2Oe",
-        "outputId": "3d796920-23c5-4b8c-c9de-620e646c7d4b"
+        "outputId": "b8860994-1ddd-4eae-d470-15b840ed6e43"
       },
-      "execution_count": 92,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "7.694753584014332"
+              "7.43824707483614"
             ]
           },
           "metadata": {},
-          "execution_count": 92
+          "execution_count": 17
         }
       ]
     },
@@ -571,19 +571,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "nL_aB7gegAS4",
-        "outputId": "31c031cb-ffaf-40a5-fd7e-e3c921789e2d"
+        "outputId": "3dc837d1-aa43-4938-9777-171d552b6642"
       },
-      "execution_count": 93,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "3.8548407501191835"
+              "3.7258172284026276"
             ]
           },
           "metadata": {},
-          "execution_count": 93
+          "execution_count": 18
         }
       ]
     },
@@ -614,9 +614,9 @@
           "height": 472
         },
         "id": "11ZMMiIkgfQA",
-        "outputId": "aafd4075-37be-4ebf-8bdf-20c02d0f1273"
+        "outputId": "6993b85a-9569-40e9-b22a-9f2d41514723"
       },
-      "execution_count": 94,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -626,7 +626,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 94
+          "execution_count": 19
         },
         {
           "output_type": "display_data",
@@ -667,9 +667,9 @@
           "height": 472
         },
         "id": "DNk-bhlYiJnN",
-        "outputId": "b9158b08-8faf-45cb-b0b4-685307509b84"
+        "outputId": "ee3f1146-ce97-490f-a86d-5a8a603673c8"
       },
-      "execution_count": 95,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -679,7 +679,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 95
+          "execution_count": 20
         },
         {
           "output_type": "display_data",
@@ -712,9 +712,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1wlajwsOi-wN",
-        "outputId": "cb7044a5-c699-4b65-e31e-8b0fe5f4f947"
+        "outputId": "2cbddfef-8e8b-47bb-dfb5-6d6c2de9fae2"
       },
-      "execution_count": 96,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -724,7 +724,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 96
+          "execution_count": 21
         }
       ]
     },
@@ -749,9 +749,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "QPrLkuo1jVL_",
-        "outputId": "d8d5f397-e1f4-4b78-a5f5-1c0f52f5c3a7"
+        "outputId": "d86fefdf-eef9-44dd-a541-7090bec91600"
       },
-      "execution_count": 97,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -761,7 +761,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 97
+          "execution_count": 22
         }
       ]
     },
@@ -791,9 +791,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "CyRb8lXDjj8h",
-        "outputId": "34b315de-a38c-4c11-9d6d-fb8aa0c016bc"
+        "outputId": "0140f665-9ea7-4766-e778-569b31c5d169"
       },
-      "execution_count": 98,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -803,7 +803,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 98
+          "execution_count": 23
         }
       ]
     },
@@ -826,7 +826,7 @@
       "metadata": {
         "id": "ReqOjQ5akFJH"
       },
-      "execution_count": 99,
+      "execution_count": 24,
       "outputs": []
     },
     {
@@ -848,9 +848,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Ai7i-1uVkLiP",
-        "outputId": "d9a01749-ac77-4676-b763-309a15e56c8e"
+        "outputId": "1d1758c3-4eeb-40ba-847a-6bf17b5e27b5"
       },
-      "execution_count": 100,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -860,7 +860,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 100
+          "execution_count": 25
         }
       ]
     },
@@ -883,9 +883,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Mtn2isJxkPSy",
-        "outputId": "f2c4b868-2375-4df7-e876-8201d4d2350d"
+        "outputId": "472f389f-ab3b-4fef-e830-f35043e8206e"
       },
-      "execution_count": 101,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -895,7 +895,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 101
+          "execution_count": 26
         }
       ]
     },
@@ -924,19 +924,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "QZldnz_AlE67",
-        "outputId": "48dc2686-7973-40ef-f318-e1af58e09dae"
+        "outputId": "28274860-8719-4288-ec4b-2b96ed244d3d"
       },
-      "execution_count": 102,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.008146506526861897"
+              "0.006331839127955939"
             ]
           },
           "metadata": {},
-          "execution_count": 102
+          "execution_count": 27
         }
       ]
     },
@@ -961,7 +961,7 @@
       "metadata": {
         "id": "SvXKugoLlTQX"
       },
-      "execution_count": 103,
+      "execution_count": 28,
       "outputs": []
     },
     {
@@ -977,38 +977,16 @@
     {
       "cell_type": "code",
       "source": [
-        "# 距離行列を作成\n",
         "n = len(g)\n",
-        "nodes = list(g.nodes())\n",
-        "dist_matrix = np.zeros((n, n))\n",
-        "dist_matrix.fill(np.inf)\n",
+        "nodal_global_efficiency = {}\n",
+        "for i in g.nodes():\n",
+        "  efficiency = 0\n",
+        "  for j in g.nodes():\n",
+        "      if i != j and j in distances[i]:\n",
+        "          efficiency += 1.0 / distances[i][j]\n",
+        "  nodal_global_efficiency[i] = efficiency / (n - 1)\n",
         "\n",
-        "# ノードのインデックスを管理する辞書を作成\n",
-        "node_to_index = {node: i for i, node in enumerate(nodes)}\n",
-        "# 辞書から行列形式に変換（ノードラベルを考慮）\n",
-        "for i in distances:\n",
-        "    for j in distances[i]:\n",
-        "        idx_i = node_to_index[i]\n",
-        "        idx_j = node_to_index[j]\n",
-        "        dist_matrix[idx_i][idx_j] = distances[i][j]\n",
-        "\n",
-        "# infinityの警告を無視しながら、逆数を取る（1/distance）\n",
-        "with np.errstate(divide='ignore'):\n",
-        "    dinv_mtx = 1.0 / dist_matrix\n",
-        "\n",
-        "# 無限大（到達不能）を0に置換\n",
-        "dinv_mtx[np.isinf(dinv_mtx)] = 0\n",
-        "# 対角要素を0に設定\n",
-        "np.fill_diagonal(dinv_mtx, 0)\n",
-        "\n",
-        "# 各ノードの大域効率性を計算\n",
-        "nodal_global_efficiency = dinv_mtx.sum(axis=1) / (n - 1)\n",
-        "\n",
-        "# 平均大域効率性を計算\n",
-        "ave_global_efficiency = np.mean(nodal_global_efficiency)\n",
-        "\n",
-        "# 結果をノード名と紐付ける\n",
-        "nodal_global_efficiency = dict(zip(nodes, nodal_global_efficiency))\n",
+        "ave_global_efficiency = sum(nodal_global_efficiency.values()) / n\n",
         "\n",
         "print(f\"Average Global Efficiency: {ave_global_efficiency}\")"
       ],
@@ -1017,15 +995,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "LO_JuvHemkBr",
-        "outputId": "26edfebc-f11f-47ab-f5a0-318424768050"
+        "outputId": "9651f842-beea-4b50-d5e7-64be7de25cab"
       },
-      "execution_count": 104,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Average Global Efficiency: 0.5020356333947833\n"
+            "Average Global Efficiency: 0.5058656887131002\n"
           ]
         }
       ]
@@ -1033,7 +1011,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Average Global Efficiencyだけなら、``nx.global_efficiency()``でも求めることもできる。ただし、エッジ重みは無視される。"
+        "Average Global Efficiencyだけなら、``nx.global_efficiency()``でも求めることもできる。ただし、ノード毎のGlobal Efficiencyは計算されない。また重み付きネットワークには対応していない。"
       ],
       "metadata": {
         "id": "gklbGxaaQr4i"
@@ -1051,35 +1029,29 @@
     {
       "cell_type": "code",
       "source": [
-        "# ノードのリストを取得\n",
-        "nodes = list(g.nodes())\n",
+        "nodal_local_efficiency = {}\n",
+        "for node in g.nodes():\n",
+        "  # 隣接ノードを取得\n",
+        "  neighbors = list(g.neighbors(node))\n",
+        "  num_neighbors = len(neighbors)\n",
         "\n",
-        "# 各ノードの局所効率性を計算\n",
-        "nodal_local_efficiency = []\n",
-        "for node in nodes:\n",
-        "    # 隣接ノードを取得\n",
-        "    neighbors_list = list(g.neighbors(node))\n",
-        "    num_nei = len(neighbors_list)\n",
+        "  if num_neighbors > 1:\n",
+        "    # 隣接ノード間の効率性の合計を計算\n",
+        "    efficiency_sum = 0\n",
+        "    for i, j in permutations(neighbors, 2):\n",
+        "        # 隣接ノード間の距離を取得\n",
+        "        if j in distances[i]:\n",
+        "            efficiency_sum += 1.0 / distances[i][j]\n",
         "\n",
-        "    if num_nei > 1:\n",
-        "        # 隣接ノードのインデックスを取得\n",
-        "        nei_indices = [node_to_index[nei] for nei in neighbors_list]\n",
+        "    # ノードの局所効率性を計算\n",
+        "    local_eff = efficiency_sum / (num_neighbors * (num_neighbors - 1))\n",
+        "    nodal_local_efficiency[node] = local_eff\n",
         "\n",
-        "        # 隣接ノード間の組み合わせを生成\n",
-        "        nei_pairs = list(permutations(nei_indices, 2))\n",
-        "\n",
-        "        # 局所効率性を計算\n",
-        "        efficiency_sum = sum(dinv_mtx[i][j] for i, j in nei_pairs)\n",
-        "        local_eff = efficiency_sum / (num_nei * (num_nei - 1))\n",
-        "        nodal_local_efficiency.append(local_eff)\n",
-        "    else:\n",
-        "        nodal_local_efficiency.append(0)\n",
+        "  else:\n",
+        "    nodal_local_efficiency[node] = 0\n",
         "\n",
         "# 平均局所効率性を計算\n",
-        "ave_local_efficiency = np.mean(nodal_local_efficiency)\n",
-        "\n",
-        "# 結果をノード名と紐付ける\n",
-        "nodal_local_efficiency = dict(zip(nodes, nodal_local_efficiency))\n",
+        "ave_local_efficiency = sum(nodal_local_efficiency.values()) / len(g)\n",
         "\n",
         "print(f\"Average Local Efficiency: {ave_local_efficiency}\")"
       ],
@@ -1088,15 +1060,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "dJLATJjrovyO",
-        "outputId": "4ba89b78-1b52-4e20-8523-b22f9ea78280"
+        "outputId": "aa897d56-6960-4574-9dbb-c7872b3f286a"
       },
-      "execution_count": 105,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Average Local Efficiency: 1.2018667932680211\n"
+            "Average Local Efficiency: 1.1969922135287185\n"
           ]
         }
       ]
@@ -1104,7 +1076,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Average Local Efficiencyだけなら、``nx.local_efficiency()``でも求めることもできる。ただし、エッジ重みは無視される。"
+        "Average Local Efficiencyだけなら、``nx.local_efficiency()``でも求めることもできる。ただし、ノード毎のLocal Efficiencyは計算されない。また重み付きネットワークには対応していない。"
       ],
       "metadata": {
         "id": "wR_hKu6OQ-Ua"
