--- a/network_property/network_property.ipynb
+++ b/network_property/network_property.ipynb
@@ -52,7 +52,9 @@
         "import matplotlib.pyplot as plt\n",
         "import random\n",
         "import numpy as np\n",
-        "from itertools import permutations"
+        "from itertools import permutations\n",
+        "import scipy.sparse.csgraph as csgraph\n",
+        "from scipy.sparse import csr_array"
       ],
       "metadata": {
         "id": "nCcbEfDAZyy9"
@@ -72,7 +74,7 @@
     {
       "cell_type": "code",
       "source": [
-        "df = pd.read_csv(\"../data/ecoli_regDB5.txt\", sep='\\s+', header=None)\n",
+        "df = pd.read_csv(\"https://raw.githubusercontent.com/kztakemoto/network-analysis-in-biology/refs/heads/main/data/ecoli_regDB5.txt\", sep='\\s+', header=None)\n",
         "\n",
         "# グラフオブジェクトの作成\n",
         "g_dir = nx.from_pandas_edgelist(df,\n",
@@ -124,7 +126,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ffrhwsxAZpRj",
-        "outputId": "29a71b31-3148-4f5d-8e8d-7dd8e2693b8a"
+        "outputId": "60b31eb5-7594-428f-8c88-3c7004e5b8df"
       },
       "execution_count": 4,
       "outputs": [
@@ -163,7 +165,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "AnsIRr-5aGiO",
-        "outputId": "e6270dc1-a5d5-4c92-9b9d-56c1de62c426"
+        "outputId": "aaee9471-ed19-4ba1-d634-c486e5ba91fb"
       },
       "execution_count": 5,
       "outputs": [
@@ -195,7 +197,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "VIAo53P1atzQ",
-        "outputId": "de69e3c1-3578-4500-ce0d-738f5bebad1a"
+        "outputId": "06b64654-e0dd-41a3-89b8-ffc585c5d656"
       },
       "execution_count": 6,
       "outputs": [
@@ -270,7 +272,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zgKEHAy0bokq",
-        "outputId": "0a62f211-f495-4511-a522-64347de6d81a"
+        "outputId": "176e9462-51fb-4177-e1f6-e6b24dc3c272"
       },
       "execution_count": 9,
       "outputs": [
@@ -296,7 +298,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FoyWX8x3eNBb",
-        "outputId": "4c3275d1-0a05-4aa9-93df-8c21e2a62de2"
+        "outputId": "1d601aef-19d0-4aa3-a022-1867cc42a966"
       },
       "execution_count": 10,
       "outputs": [
@@ -322,7 +324,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "P_hnDWa5ePde",
-        "outputId": "01ee4dce-8281-47a2-a918-7b211eb1c91a"
+        "outputId": "2f756fdc-770b-46c2-ceb3-f3babfe55f92"
       },
       "execution_count": 11,
       "outputs": [
@@ -359,7 +361,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "AvetpPMNeWcu",
-        "outputId": "eb31e8ae-7c09-4d34-ec2d-4d2d9208d121"
+        "outputId": "ecce5d55-014e-4f8e-efd2-aae127ed4e32"
       },
       "execution_count": 12,
       "outputs": [
@@ -394,7 +396,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fJrjcDymfFv5",
-        "outputId": "b6d298a6-b113-47d3-a99e-7804c18438f5"
+        "outputId": "f4e68e51-07bd-4885-bf5a-f9e0de14a117"
       },
       "execution_count": 13,
       "outputs": [
@@ -429,7 +431,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "CRLjWqxkfVbK",
-        "outputId": "394a9314-6163-4b19-d285-bbe3b85faec2"
+        "outputId": "acb359f5-332d-4028-dd3e-3fba1939bc11"
       },
       "execution_count": 14,
       "outputs": [
@@ -464,7 +466,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8QkbQa99fnct",
-        "outputId": "6c9221a7-199d-4f0f-94c7-159c2c4725d1"
+        "outputId": "339f41ac-d9a3-49d3-f9c2-c804b294978b"
       },
       "execution_count": 15,
       "outputs": [
@@ -490,7 +492,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "51EbdvS3fq6s",
-        "outputId": "e57bba34-0149-48c9-ab8c-bf798318c303"
+        "outputId": "bf35f423-6970-4fb6-ac36-6781676a409e"
       },
       "execution_count": 16,
       "outputs": [
@@ -534,7 +536,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "m2mZM9AWf2Oe",
-        "outputId": "b8860994-1ddd-4eae-d470-15b840ed6e43"
+        "outputId": "4acbcf0d-8095-4997-a25e-b64d7bed40f8"
       },
       "execution_count": 17,
       "outputs": [
@@ -542,7 +544,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "7.43824707483614"
+              "7.63194529911555"
             ]
           },
           "metadata": {},
@@ -571,7 +573,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "nL_aB7gegAS4",
-        "outputId": "3dc837d1-aa43-4938-9777-171d552b6642"
+        "outputId": "13dcf935-b8d2-4578-b0ad-c7fd9bd35b58"
       },
       "execution_count": 18,
       "outputs": [
@@ -579,7 +581,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "3.7258172284026276"
+              "3.840784989386257"
             ]
           },
           "metadata": {},
@@ -614,7 +616,7 @@
           "height": 472
         },
         "id": "11ZMMiIkgfQA",
-        "outputId": "6993b85a-9569-40e9-b22a-9f2d41514723"
+        "outputId": "d78ed279-ed11-4fed-94d1-7bd67c65e710"
       },
       "execution_count": 19,
       "outputs": [
@@ -667,7 +669,7 @@
           "height": 472
         },
         "id": "DNk-bhlYiJnN",
-        "outputId": "ee3f1146-ce97-490f-a86d-5a8a603673c8"
+        "outputId": "99acce87-db7e-45df-e3a5-b4f392107086"
       },
       "execution_count": 20,
       "outputs": [
@@ -712,7 +714,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1wlajwsOi-wN",
-        "outputId": "2cbddfef-8e8b-47bb-dfb5-6d6c2de9fae2"
+        "outputId": "6a3b82f5-3054-449c-ead5-d6a54bf12a20"
       },
       "execution_count": 21,
       "outputs": [
@@ -749,7 +751,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "QPrLkuo1jVL_",
-        "outputId": "d86fefdf-eef9-44dd-a541-7090bec91600"
+        "outputId": "540db47c-4daf-43d8-df69-cbeae5301641"
       },
       "execution_count": 22,
       "outputs": [
@@ -791,7 +793,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "CyRb8lXDjj8h",
-        "outputId": "0140f665-9ea7-4766-e778-569b31c5d169"
+        "outputId": "c47e77be-c850-4b97-ca18-614bc97b94d6"
       },
       "execution_count": 23,
       "outputs": [
@@ -848,7 +850,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Ai7i-1uVkLiP",
-        "outputId": "1d1758c3-4eeb-40ba-847a-6bf17b5e27b5"
+        "outputId": "382378dd-aa03-460b-b2f4-8ba3ed54252c"
       },
       "execution_count": 25,
       "outputs": [
@@ -883,7 +885,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Mtn2isJxkPSy",
-        "outputId": "472f389f-ab3b-4fef-e830-f35043e8206e"
+        "outputId": "72c16ff7-e116-4747-f9a6-9355066d3454"
       },
       "execution_count": 26,
       "outputs": [
@@ -924,7 +926,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "QZldnz_AlE67",
-        "outputId": "28274860-8719-4288-ec4b-2b96ed244d3d"
+        "outputId": "156c06b4-50b9-41a2-9355-ec43ddac782d"
       },
       "execution_count": 27,
       "outputs": [
@@ -932,7 +934,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.006331839127955939"
+              "0.008710921253009082"
             ]
           },
           "metadata": {},
@@ -944,8 +946,7 @@
       "cell_type": "markdown",
       "source": [
         "## 最短経路\n",
-        "\n",
-        "最短経路長行列：各ノード間の距離行列に対応する"
+        "\n"
       ],
       "metadata": {
         "id": "J5oVEXc9lRUY"
@@ -963,6 +964,166 @@
       },
       "execution_count": 28,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 平均最短経路長\n"
+      ],
+      "metadata": {
+        "id": "2eoWqXSreODL"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "nx.average_shortest_path_length(g)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "tbqb_HDleSJR",
+        "outputId": "111db51b-0ba8-4527-98d7-3c5633a8676f"
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3.596241900468412"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 29
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "重み付きの場合"
+      ],
+      "metadata": {
+        "id": "SukSNs3Nfdsu"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "nx.average_shortest_path_length(g, weight='weight')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zgnuet9gebFY",
+        "outputId": "d08ab45e-e953-401d-c33b-1c36cd5dba54"
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2.89522839781"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 30
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "ただ、networkxは最短経路の計算が(も)遅いのですし、`average_shortest_path_length`は連結したネットワークにしか使えません。別の関数を使う方がいいでしょう。以下はscipyのcsgraphを使った例"
+      ],
+      "metadata": {
+        "id": "skob_W_YY2QO"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def compute_distances(g, unweighted=False):\n",
+        "  adj_matrix = nx.adjacency_matrix(g).toarray()\n",
+        "  distances = csgraph.shortest_path(adj_matrix, directed=g.is_directed(), unweighted=unweighted)\n",
+        "  d_ave = np.mean(distances[np.isfinite(distances) & (distances > 0)])\n",
+        "  return d_ave, distances"
+      ],
+      "metadata": {
+        "id": "8muB_OcIaDg9"
+      },
+      "execution_count": 31,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "エッジ重みが割り当てられている場合は、自動的に重み付きで計算されます。"
+      ],
+      "metadata": {
+        "id": "wfUptZIcfnCF"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "d_ave, dist_matrix = compute_distances(g)\n",
+        "print(f\"Average Shortest Path Length: {d_ave}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "cTRrgDmLa4KG",
+        "outputId": "671cdb44-2162-4b51-fb7f-712551bc730e"
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Average Shortest Path Length: 2.8952283978100652\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "エッジ重みを無視したい場合は次のようです。"
+      ],
+      "metadata": {
+        "id": "DGmFom9yfvyO"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "d_ave, dist_matrix = compute_distances(g, unweighted=True)\n",
+        "print(f\"Average Shortest Path Length: {d_ave}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "oY4D7SWCfPQx",
+        "outputId": "3adf3764-e2a8-4ca8-bf40-aae8cf4b6212"
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Average Shortest Path Length: 3.596241900468412\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -991,19 +1152,19 @@
         "print(f\"Average Global Efficiency: {ave_global_efficiency}\")"
       ],
       "metadata": {
+        "id": "LO_JuvHemkBr",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "LO_JuvHemkBr",
-        "outputId": "9651f842-beea-4b50-d5e7-64be7de25cab"
+        "outputId": "46ede548-c1e7-46ea-fa34-a4bd75beabdb"
       },
-      "execution_count": 29,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Average Global Efficiency: 0.5058656887131002\n"
+            "Average Global Efficiency: 0.49966650532776524\n"
           ]
         }
       ]
@@ -1056,19 +1217,19 @@
         "print(f\"Average Local Efficiency: {ave_local_efficiency}\")"
       ],
       "metadata": {
+        "id": "dJLATJjrovyO",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "dJLATJjrovyO",
-        "outputId": "aa897d56-6960-4574-9dbb-c7872b3f286a"
+        "outputId": "f50c6810-bc74-4175-a21a-84be3a12496d"
       },
-      "execution_count": 30,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Average Local Efficiency: 1.1969922135287185\n"
+            "Average Local Efficiency: 1.2554018002340985\n"
           ]
         }
       ]
