--- a/network_models/erdos_renyi_model.ipynb
+++ b/network_models/erdos_renyi_model.ipynb
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "-sOJSqu__rbz"
       },
@@ -59,7 +59,7 @@
       "metadata": {
         "id": "_siscpIa_4Q9"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -83,7 +83,7 @@
       "metadata": {
         "id": "z_wai4_wgZ7Q"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -111,7 +111,7 @@
         "id": "1Uj4_MUj_-aa",
         "outputId": "1c9fbcbc-568d-47ad-ae2f-f76674c802af"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -170,7 +170,7 @@
         "id": "073bRtrjAyeI",
         "outputId": "c105c4af-3905-4c58-8fae-aef813dda278"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -237,7 +237,7 @@
         },
         "outputId": "46ed498d-58d1-4c95-ab05-d21b92ab294b"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -303,7 +303,7 @@
         },
         "outputId": "2dc2f21c-16ce-4328-fbd1-4fbbb6ca9694"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -341,7 +341,7 @@
       "cell_type": "code",
       "source": [
         "# エッジリストの読み込み\n",
-        "df = pd.read_csv(\"https://raw.githubusercontent.com/kztakemoto/network-analysis-in-biology/refs/heads/main/data/ecoli_ppi_Hu_etal_2009.txt\", sep='\\s+', header=None)\n",
+        "df = pd.read_csv(\"../data/ecoli_ppi_Hu_etal_2009.txt\", sep='\\s+', header=None)\n",
         "\n",
         "# グラフオブジェクトの作成\n",
         "g = nx.from_pandas_edgelist(df, source=0, target=1)\n",
@@ -355,7 +355,7 @@
       "metadata": {
         "id": "uDLAM35fGay5"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -402,7 +402,7 @@
         },
         "outputId": "911341a8-0da6-44c6-9771-f1b41a043f24"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -461,7 +461,7 @@
         "\n",
         "for file in files:\n",
         "    # エッジリストの読み込み\n",
-        "    df = pd.read_csv(f\"https://raw.githubusercontent.com/kztakemoto/network-analysis-in-biology/refs/heads/main/data/{file}\", sep='\\s+', header=None)\n",
+        "    df = pd.read_csv(f\"../data/{file}\", sep='\\s+', header=None)\n",
         "\n",
         "    # グラフオブジェクトの作成\n",
         "    g = nx.from_pandas_edgelist(df, source=0, target=1)\n",
@@ -495,7 +495,7 @@
       "metadata": {
         "id": "13eVILXTIcsi"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -520,7 +520,7 @@
         },
         "outputId": "5cd07b1d-7033-422b-c9dc-739c42a15dd2"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
