--- a/network_property/network_property.ipynb
+++ b/network_property/network_property.ipynb
@@ -74,7 +74,7 @@
     {
       "cell_type": "code",
       "source": [
-        "df = pd.read_csv(\"https://raw.githubusercontent.com/kztakemoto/network-analysis-in-biology/refs/heads/main/data/ecoli_regDB5.txt\", sep='\\s+', header=None)\n",
+        "df = pd.read_csv(\"../data/ecoli_regDB5.txt\", sep='\\s+', header=None)\n",
         "\n",
         "# グラフオブジェクトの作成\n",
         "g_dir = nx.from_pandas_edgelist(df,\n",
